# tree-sitter-nextbasic

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-nextbasic.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nextbasic/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNextbasic/: nextbasic.h
bindings/swift/TreeSitterNextbasicTests/: TreeSitterNextbasicTests.swift
src/: grammar.json  node-types.json  parser.c
